# simplexsolver

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Simplex.hpp  tools.hpp
sources/: Simplex.cpp  main.cpp  tools.cpp
